force-app/main/default/objects/Workflow_Sub_Stage__mdt/Workflow_Sub_Stage__mdt.object-meta.xml
<CustomObject>
    <description>this object used to store all the workflow sub stages of main stages</description>
    <label>Workflow Sub Stage</label>
    <pluralLabel>Workflow Sub Stages</pluralLabel>
</CustomObject>