force-app/main/default/objects/Workflow_Sub_Stage__mdt/fields/Open_Flow__c.field-meta.xml
<CustomField>
    <fullName>Open_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Open Flow</label>
    <type>Checkbox</type>
</CustomField>