force-app/main/default/objects/Workflow_Sub_Stage__mdt/fields/Order_No__c.field-meta.xml
<CustomField>
    <fullName>Order_No__c</fullName>
    <description>This field used to order the Stages and its Sub Stages</description>
    <inlineHelpText>This field used to order the Stages and its Sub Stages</inlineHelpText>
    <label>Order No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>