force-app/main/default/objects/Workflow_Sub_Stage__mdt/fields/Quick_Action__c.field-meta.xml
<CustomField>
    <fullName>Quick_Action__c</fullName>
    <description>Quick Action  name related to the workflow substage</description>
    <label>Quick Action</label>
    <length>200</length>
    <type>Text</type>
</CustomField>