force-app/main/default/objects/Workflow_Sub_Stage__mdt/fields/WorkFlow_Stage__c.field-meta.xml
<CustomField>
    <fullName>WorkFlow_Stage__c</fullName>
    <description>Related field to Workflow Stage</description>
    <inlineHelpText>Related field to Workflow Stage</inlineHelpText>
    <label>WorkFlow Stage</label>
    <referenceTo>WorkFlow_Stage__mdt</referenceTo>
    <relationshipLabel>Workflow Sub Stages</relationshipLabel>
    <relationshipName>Workflow_Sub_Stages</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>